ohb/manifests/001-ohb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ohb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ohb
  template:
    metadata:
      labels:
        app: ohb
    spec:
      containers:
      - name: ohb
        image: docker.io/artuja/ohb:main
        imagePullPolicy: Always
