ohb/manifests/002-obh-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ohb-service
  labels:
    name: ohb
spec:
  type: ClusterIP
  selector:
    app: ohb
  ports:
  - port: 7777
    targetPort: 7777
    protocol: TCP
