ohb/manifests/003-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ohb-route
spec:
  host: ohb.apps.nord.nord.home 
  port:
    targetPort: 7777
    termination: edge
  to:
    kind: Service
    name: ohb-service
